--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
   <script src='javascripts/views/lists/list.js'></script>
   <script src='javascripts/views/cards/card.js'></script>
   <script src='javascripts/views/cards/card_add.js'></script>
+  <script src='javascripts/views/cards/card_show.js'></script>
+
   <script>
     App.init();
   </script>
