Search functionality added

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,10 @@
   <script src="javascripts/handlebars_templates.js"></script>
 </head>
 <body>
-
+  <header class='navbar'>
+  </header>
+  <main>
+  </main>
   <script src='javascripts/models/card.js'></script>
   <script src='javascripts/models/list.js'></script>
   <script src='javascripts/models/board.js'></script>
@@ -17,6 +20,7 @@
   <script src='javascripts/collections/boards.js'></script>
   <script src='javascripts/app.js'></script>
   <script src='javascripts/views/layout.js'></script>
+  <script src='javascripts/views/search.js'></script>
   <script src='javascripts/views/boards/index.js'></script>
   <script src='javascripts/views/boards/board.js'></script>
   <script src='javascripts/views/boards/show.js'></script>
